@@ -38,6 +38,7 @@ version <next>:
 - ocv_smooth filter
 - frei0r wrapper filter
 - change crop filter syntax to width:height:x:y
+- make the crop filter accept parametric expressions
 
 
 version 0.6:
